--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -116,3 +116,30 @@ button {
       padding: 5px;
       padding-top: 5px;
   }
+  ul{
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      width: 60px;
+      
+  }
+  li a{
+      display: block;
+      background-color: none;
+      padding: 8px;
+      text-align: center;
+ }
+  li a:hover{
+      background-color: blueviolet;
+  }
+  button:hover{
+      background-color: black;
+  }
+  li{
+      float: right;
+  }
+  .nav_bar li a{
+    float: right;
+  }
+  
+
