--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -33,15 +33,36 @@ button {
       transition: .4s ease-in-out;
       padding: 10px;
       padding-inline-end: 10px;
-
-
-       
-  }
-  .image:hover .image{
-      opacity: 0.4;
-          cursor: zoom-in;
-
-  }
+    }
+    .bottom-left{
+       position: absolute;
+       bottom: 1px;
+       left: 40px;
+       color: white;
+       font-size: small;
+    }
+    .bottom-left2{
+        position: absolute;
+        bottom: 1px;
+        left: 40px;
+        color: white;
+        font-size: small;
+        
+    }
+    .bottom-right{
+        position: absolute;
+        bottom: 1px;
+        right: 30px;
+        color: black;
+    }
+    .top-left{
+        position: absolute;
+        top: 1px;
+        left: 10px;
+        color: black;
+        font-size: small;
+    }
+  
   .mentors{
       text-align: center;
       display: block;
@@ -49,8 +70,7 @@ button {
       margin-top: 10px;
       margin-left: auto;
       text-indent:5px;
-      
-        
+          
   }
 
   h2{
@@ -92,12 +112,14 @@ button {
       padding: 10px;
       display: inline;
   }
+  
   .column{
       float: left;
       padding: 5px;
       display: block;
       column-gap: normal;
       flex: 33.3%;
+      text-align: center;
   }
   .row::after{
       content: "";
@@ -118,9 +140,9 @@ button {
   }
   ul{
       list-style-type: none;
-      padding: 0;
-      margin: 0;
-      width: 60px;
+      padding: 5px 6px;
+      margin: 3px;
+      
       
   }
   li a{
@@ -140,6 +162,7 @@ button {
   }
   .nav_bar li a{
     float: right;
+    padding: 5px;
   }
   
 
