--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,48 +3,204 @@ body{
     font-family: Nunito;
 
 }
-.container{
-    margin: 0px 0px 0px 0px;
+.full-page{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    /*this block of code is a section for setting the position of the content between the class full page*/
 }
-.nav-bar{
-    display: block;
-    margin-bottom: 400px;
+.navbar{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    padding-left: 50px;
+    padding-right: 30px;
+    padding-top: 50px;
+    /*this is for setting the dimensions of the nav bar*/
 }
-.nav_bar ul{
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav > ul{
     display: inline-block;
-    float: right;
-    list-style-type: none;
-
+    list-style: none;
 }
-.nav-bar li{
-    list-style-type: none;
-      text-decoration: none;
-      margin-bottom: 30px;
-      float: right;  
-      display: inline;  
-      margin-left: 30px;
-}
-   a{
-    display: block;
-    padding: 8px;
-      background-color: none;
-      text-decoration: none;
-      
-}
-
-button {
-    background-color: #EC4067;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
+nav > ul > li{
     display: inline-block;
+    margin-right: 70px;
+    /*these blocks are for styling the list elements*/
+}
+nav > ul > li > a{
     font-size: 15px;
+    color: black;
+    outline: none;
+    border: none;
     cursor: pointer;
-    border-radius: 6px;
-    border-style: none;
-   
-   }
+    text-decoration: none;
+}
+nav > ul > li > button{
+    font-size: 15px;
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: #EC4067;
+    border-radius: 5px;
+    width: 60px;
+    height: 30px;
+}
+.intro{
+    display: block;
+    padding-left: 70px;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    
+}
+#h1-1{
+    color: #EC4067;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: larger;
+}
+#nurture{
+    margin-bottom: 20px;
+    justify-content: center;
+    width: 300px;
+}
+#enroll{
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: #EC4067;
+    border-radius: 5px;
+    width: 80px;
+    height: 30px;
+}
+#explore{
+    color: #EC4067;
+    cursor: pointer;
+    background-color: white;
+    border-radius: 0px;
+    width: 80px;
+    height: 30px;
+    border-color: #EC4067;
+    border-style: solid;
+}
+.intro > .img-1{
+    float: right;
+    margin-left: 20px;
+    width: 300px;
+    height: 206px;
+    margin-right: 600px;
+    margin-top: -160px;
+    margin-bottom: 20px;
+    display: flex;
+    position: inherit;
 
+}
+.stories{
+    display:block;
+    padding-left: 70px;
+    margin-bottom: 50px;
+    justify-content: center;
+    align-items: center;
+}
+.stories > .img-2{
+    float: left;
+    margin-right: 50px;
+    width: 300px;
+    height: 206px;
+    display: flex;
+
+}
+.stories > #orientation{
+    margin-bottom: 20px;
+    justify-content: center;
+    width: 600px;
+}
+.stories > #day{
+    margin-bottom: 20px;
+}
+ #album{
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: #EC4067;
+    border-radius: 5px;
+    width: 80px;
+    height: 30px;
+}
+.meeting{
+    display:block;
+    padding-left: 70px;
+    margin-bottom: 50px;
+    
+}
+.meeting > h3{
+    margin-bottom: 20px
+}
+.meeting > #board{
+    margin-bottom: 20px;
+    justify-content: center;
+    width: 300px;
+    margin-right: 30px;
+}
+.meeting > .img-3{
+    float: right;
+    margin-left: 20px;
+    width: 300px;
+    height: 206px;
+    display: flex;
+    margin-right: 680px;
+    margin-top: -180px;
+    position:inherit;
+}
+.meeting > #read{
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: #EC4067;
+    border-radius: 5px;
+    width: 100px;
+    height: 35px;
+}
+.graduation{
+    display:block;
+    padding-left: 70px;
+    margin-bottom: 50px;
+    
+}
+.graduation > h3{
+    margin-bottom: 20px
+}
+.graduation > #graduate{
+    margin-bottom: 20px;
+    justify-content: center;
+    width: 600px;
+}
+.graduation > .img-4{
+    float: left;
+    margin-right: 50px;
+    width: 300px;
+    height: 206px;
+    display: flex;
+    }
+
+.graduation > #album{
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: #EC4067;
+    border-radius: 5px;
+    width: 100px;
+    height: 35px;
+}
   .moringa{
       margin-top: 200px;
       margin-bottom: 50px;
